[package]
name = "OwnIhrz-ClusterManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
cipher = "0.4.4"
rand = "0.8.5"
rocket = {version = "0.5.0", features = ["json"]}
serde = "1.0.195"
serde_urlencoded = "0.7.1"
crypto = "0.2"